test/Fail/NonLinearConstraint.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  _1 A A = A : Set (blocked on _1)

NonLinearConstraint.agda:7.16-9.14: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  NonLinearConstraint.agda:7.16-17
  NonLinearConstraint.agda:9.10-14
